[tool.poetry]
name = "push-to-3yourmind"
version = "0.1.0"
description = "Python library to access 3YOURMIND's API"
authors = ["Serhii Zavadskyi <sz@3yourmind.com>"]

[tool.poetry.dependencies]
python = "^3.12"

requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pdoc3 = "^0.11.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
